# chat_pdfload_embedding_gpt4_streamlit

./: .gitignore  LICENSE  Makefile  README.md  htmlTemplates.py  pyproject.toml  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
